--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <title>Aidan Feldman API</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/demo.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="jsonpanes.js"></script>
+    <script src="jsonpanel.js"></script>
     <script>
       $(function(){
-        $('.jsonpanes').jsonPanes({
+        $('.jsonpanel').jsonPanel({
           sample: "json"
         });
       });
     </script>
   </head>
   <body>
-    <div class="jsonpanes"></div>
+    <div class="jsonpanel"></div>
     <ul class="meta-links">
       <li>
         <a href="https://twitter.com/aidanfeldman" class="twitter-follow-button" data-show-count="false" data-show-screen-name="true">Follow @aidanfeldman</a>
@@ -24,7 +24,7 @@
         <a href="index.json">View raw</a>
       </li>
       <li>
-        <a href="https://github.com/afeld/jsonpanes">Fork me</a>
+        <a href="https://github.com/afeld/jsonpanel">Fork me</a>
       </li>
     </ul>
   </body>
