--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Aidan Feldman API</title>
+    <title>JSONPanel demo</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/demo.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="jsonpanel.js"></script>
@@ -19,9 +19,6 @@
       <li>
         <a href="https://twitter.com/aidanfeldman" class="twitter-follow-button" data-show-count="false" data-show-screen-name="true">Follow @aidanfeldman</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      </li>
-      <li>
-        <a href="index.json">View raw</a>
       </li>
       <li>
         <a href="https://github.com/afeld/jsonpanel">Fork me</a>
