--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>JSONPanel demo</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/demo.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="jsonpanel.js"></script>
     <script>
       $(function(){
