--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <title>JSONPanel demo</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/demo.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/qunit/qunit/qunit.css">
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="jsonpanel.js"></script>
+    <script src="bower_components/qunit/qunit/qunit.js"></script>
+    <script src="tests.js"></script>
     <script>
       $(function(){
         $('.jsonpanel').jsonPanel({
@@ -24,5 +27,8 @@
         <a href="https://github.com/afeld/jsonpanel">Fork me</a>
       </li>
     </ul>
+    <hr/>
+    <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
   </body>
 </html>
