make plugin method lower case

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="tests.js"></script>
     <script>
       $(function(){
-        $('.jsonpanel').jsonPanel({
+        $('.jsonpanel').jsonpanel({
           sample: "json"
         });
       });
