--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <script>
       $(function(){
         $('.jsonpanel').jsonpanel({
-          sample: "json"
+          sample: "json",
+          nested: {
+            object: true
+          }
         });
       });
     </script>
