more refactoring of <li> creation methods

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
       $(function(){
         $('.jsonpanel').jsonpanel({
           sample: "json",
-          nested: {
-            object: true
-          }
+          objects: {
+            nested: true
+          },
+          arrays: [
+            "also"
+          ]
         });
       });
     </script>
