set up code coverage

--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/demo.css">
     <link rel="stylesheet" type="text/css" href="bower_components/qunit/qunit/qunit.css">
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="jsonpanel.js"></script>
     <script src="bower_components/qunit/qunit/qunit.js"></script>
+    <script src="bower_components/blanket/dist/qunit/blanket.js"></script>
+    <script src="jsonpanel.js" data-cover></script>
     <script src="tests.js"></script>
     <script>
-      $(function(){
-        $('.jsonpanel').jsonpanel({
-          sample: "json",
-          objects: {
-            nested: true
-          },
-          arrays: [
-            "also"
-          ]
+      if (!location.search.match(/coverage=true/)){
+        $(document).on('ready', function(){
+
+          $('.jsonpanel').jsonpanel({
+            sample: "json",
+            objects: {
+              nested: true
+            },
+            arrays: [
+              "also"
+            ]
+          });
+
         });
-      });
+      }
     </script>
   </head>
   <body>
