initialize with options object

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         $(document).on('ready', function(){
 
           $('.jsonpanel').jsonpanel({
-            sample: "json",
-            objects: {
-              nested: true
-            },
-            arrays: [
-              "also"
-            ]
+            data: {
+              sample: "json",
+              objects: {
+                nested: true
+              },
+              arrays: [
+                "also"
+              ]
+            }
           });
 
         });
