use jquery via bower

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>JSONPanel demo</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/demo.css">
     <link rel="stylesheet" type="text/css" href="bower_components/qunit/qunit/qunit.css">
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/qunit/qunit/qunit.js"></script>
     <script src="bower_components/blanket/dist/qunit/blanket.js"></script>
     <script src="jsonpanel.js" data-cover></script>
