add usage instructions

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
           $('.jsonpanel').jsonpanel({
             data: {
-              sample: "json",
+              sample: 'json',
               objects: {
                 nested: true,
                 autolinking: 'https://github.com/afeld/jsonpanel'
               },
               arrays: [
-                "also"
+                'also'
               ]
             }
           });
