example page styling tweaks

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </script>
   </head>
   <body>
+    <h1><a href="https://github.com/afeld/jsonpanel">JSONPanel</a> demo</h1>
     <div class="jsonpanel"></div>
     <ul class="meta-links">
       <li>
