link to instructions explicitly

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     </script>
   </head>
   <body>
-    <h1><a href="https://github.com/afeld/jsonpanel">JSONPanel</a> demo</h1>
+    <h1>JSONPanel demo</h1>
+    <p>
+      See <a href="https://github.com/afeld/jsonpanel#usage">usage instructions</a>.
+    </p>
     <div class="jsonpanel"></div>
     <ul class="meta-links">
       <li>
