--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
               sample: 'json',
               objects: {
                 nested: true,
-                autolinking: 'https://github.com/afeld/jsonpanel'
+                autolinking: 'https://github.com/afeld/jsonpanel',
+                text_wrap: "Bicycle rights Brooklyn irony fap pickled, VHS umami flannel ethnic bespoke biodiesel kogi. PBR&B food truck Odd Future lo-fi master cleanse, distillery hashtag mlkshk Pinterest chia. Blue Bottle put a bird on it twee mlkshk ennui."
               },
               arrays: [
                 'also'
